# plan_commission_workbench

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: windows-build.yml
plan_commission_workbench/: __init__.py  agenda_pipeline.py  api.py  application_pipeline.py  cli.py  desktop_launcher.py  docling_adapter.py  docling_worker.py  exceptions.py  export.py  legistar.py  llm.py  models.py  quality.py  run_worker.py  runtime.py  segmentation.py  server.py  settings.py  statuses.py  storage.py  watchdog.py
plan_commission_workbench/static/: app.js  styles.css
plan_commission_workbench/templates/: agenda.html  applications.html  base.html  review.html  run.html
scripts/: build_windows.ps1
tests/: test_desktop_launcher.py  test_legistar_download.py  test_llm.py  test_pipeline_integration.py  test_segmentation.py  test_server_ui.py  test_storage_export.py
