[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plan-commission-workbench"
version = "0.1.0"
description = "Standalone Madison Plan Commission review and export workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "jinja2>=3.1",
    "openai>=1.0",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "requests>=2.32",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
docling = ["docling[rapidocr]>=2.0"]
test = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
pcw = "plan_commission_workbench.cli:main"

[tool.setuptools.packages.find]
include = ["plan_commission_workbench*"]

[tool.setuptools.package-data]
plan_commission_workbench = ["templates/*.html", "static/*.css", "static/*.js"]
